Getting ready for portfolio

--- a/index.html
+++ b/index.html
@@ -3,11 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=0.75">
-    <title>UpWords solver</title>
+    <title>Elijah Bradshaw - UpWords solver</title>
     <script src="./scripts/main.js" type="module"></script>
+    <link rel="stylesheet" href="../../Header.css">
     <link rel="stylesheet" href="./styles/style.css">
 </head>
 <body>
+    <div class="header">
+        <a href="../../Home/" draggable="false">
+            <button>
+                Home
+            </button>
+        </a>
+        <a href="../board-game-solver-home/" draggable="false">
+            <button>
+                Board Game Solvers
+            </button>
+        </a>
+    </div>
     <div id="canvas"></div>
 </body>
 </html>
